Fix some codes of hockey/lobby.js * Fix bug (disconnect user request) * Get all users by client side * Fix shrink white space bug

--- a/public/stylesheets/games/hockey/lobby.css
+++ b/public/stylesheets/games/hockey/lobby.css
@@ -40,7 +40,7 @@ body h1 {
 .room-title {
   flex-grow: 1;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: pre;
   text-overflow: ellipsis;
 }
 
